--- a/styles/health.css
+++ b/styles/health.css
@@ -147,9 +147,10 @@
     border:none;
     cursor: pointer;
     font-weight: 600;
-    
-   
-
+    transition: all 0.5s linear ;
+}
+.btn-primary:hover{
+    font-size: 1rem;
 }
 .btn-secondary{
     background-color: black;
@@ -160,10 +161,15 @@
     height:54px;
     cursor: pointer;
     font-weight: 600;
+    transition: all 0.5s linear ;
    
 }
+.btn-secondary:hover{
+    font-size: 1rem;
+    
+}
 .home-btn{
-    background-color: rgba(230,83,60);
+    background-color: rgba(230,83,60,0.9);
     border-radius: 1rem;
     padding: 5px 10px 5px 10px;
     height:38px;
@@ -174,6 +180,10 @@
     
    
     
+}
+.home-btn:hover{
+    background-color: rgb(230, 83, 60);
+
 }
 .btn-01{
     gap:1rem;
@@ -264,6 +274,67 @@ letter-spacing: 1px;
 }
 
 
+
+
+/* Habit-section */
+
+.habit-content{
+    text-align: center;
+}
+.habit-content h2{
+    font-size: 3rem;
+    font-weight: 900;
+    letter-spacing: 0%;
+    line-height: 120%;
+    color:rgb(255,255,255);
+}
+
+.habit-content p{
+    font-size: 0.875rem;
+    color:rgba(255,255,255,0.5);
+    font-weight: 400;
+    line-height:2rem;
+
+}
+.card-container{
+    margin-top: 3.625rem;
+    gap:2.5rem;
+    margin-left: 6.3rem;
+    flex-wrap: wrap;
+}
+
+.card{
+    width:14.4375rem;
+    height:17.125rem;
+    
+
+}
+.card-container .card img{
+    border-radius: 50%;
+    padding:0 1.5rem;
+   
+}
+
+.card-title{
+    
+    color:rgb(255, 255, 255);
+    font-weight: 600;
+    line-height: 120%;
+    font-size: 1.125rem;
+    text-align: center;
+    margin: 6px 0;
+
+}
+.card-desc{
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.125rem;
+    text-align: center;
+    letter-spacing: 0.3px;
+    color: rgba(255,255,255,0.5);
+}
+
+
 /* responsive layout first page */
 
 
@@ -293,6 +364,10 @@ letter-spacing: 1px;
         background: Linear-gradient( 10000deg, rgb(8, 8, 10), rgba(100,100,100,13) 500%);
        
     }
+    .habit-content{
+        margin-top: 28rem;
+        
+    }
 
     
 
@@ -315,8 +390,18 @@ letter-spacing: 1px;
         color: white;
         margin-right: 3rem;
         margin-left: 24rem;
+        cursor: pointer;
         
         
+    }
+
+    .habit-content{
+        margin-top: 28rem;
+        
+    }
+    .card-container{
+        margin-left: 10.625rem;
+        flex-direction: column;
     }
    
 }
