--- a/styles/health.css
+++ b/styles/health.css
@@ -335,6 +335,80 @@ letter-spacing: 1px;
 }
 
 
+/* run-section */
+
+/* .run-content{
+    width: 47.6875rem;
+    height: 18.125rem;
+} */
+
+
+.run{
+    gap:11rem;
+    background: rgb(34,34,34);
+    border-radius: 1.125rem;
+}
+
+.run-content{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 54px;
+   
+}
+
+.run-title{
+    font-size: 3rem;
+    font-weight: 900;
+    color:rgb(255, 255, 255);
+    line-height: 120%;
+    letter-spacing: 0%;
+    margin: 14px 0px;
+}
+
+.run-description{
+    font-size:0.875rem;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    color:rgba(255, 255, 255, 0.5);
+    margin-top: 1.75rem;
+}
+.run-btn{
+    margin-top: 4rem;
+    margin-bottom: 0px;
+    background-color: rgb(230,83,60);
+    color:white;
+    border-radius: 42px;
+   
+    width: 10.625rem;
+    height: 54px;
+    border-radius: 42px;
+    border:none;
+    cursor: pointer;
+    font-weight: 600;
+    transition: all 0.5s linear ;
+}
+.run-btn:hover{
+    font-size: 1rem;
+    
+}
+.run-image{
+
+    width: 100%;
+
+}
+
+.run-image img{
+    width: 95%;
+    border-radius: 1.125rem;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-right: 30px;
+   
+   
+}
+
+
 /* responsive layout first page */
 
 
@@ -360,10 +434,10 @@ letter-spacing: 1px;
     .images-02 img{
         width: 60%;
     }
-    .bg-color{
+    /* .bg-color{
         background: Linear-gradient( 10000deg, rgb(8, 8, 10), rgba(100,100,100,13) 500%);
        
-    }
+    } */
     .habit-content{
         margin-top: 28rem;
         
@@ -395,16 +469,48 @@ letter-spacing: 1px;
         
     }
 
+    .habits{
+        margin-left: 50px;
+    }
+
     .habit-content{
         margin-top: 28rem;
         
     }
     .card-container{
-        margin-left: 10.625rem;
+        /* margin-left: 10.625rem; */
         flex-direction: column;
     }
+    
    
 }
+
+/* responsive-layout-run-section-mobile*/
+
+@media screen and (max-width:640px){
+
+    .run{
+        flex-direction: column;
+        gap:0px;
+        margin-left: 70px;
+        width: 100%;
+    }
+    .run-content{
+        margin-right: 2.5rem;
+    }
+
+    .run-image{
+        margin-top: 0.75rem;
+    }
+    .run-image img{
+        width: 90%;
+        margin-left: 1.3rem;
+    }
+
+
+}
+
+
 
 
 
