--- a/styles/health.css
+++ b/styles/health.css
@@ -408,6 +408,68 @@ letter-spacing: 1px;
    
 }
 
+/* team-section */
+
+.team-content{
+    text-align: center;
+}
+
+.team-title{
+    color: rgb(255, 255, 255);
+    font-size: 3rem;
+    font-weight: 900;
+    line-height: 120%;
+}
+
+.team-desc{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+
+}
+.gallery{
+    margin-top: 3.75rem;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 20px;
+    row-gap: 50px;
+    
+}
+.team-card{
+    width:330px;
+    height: 300px;
+    border-radius: 1.125rem;
+    margin-left: 2.5rem;
+    position: relative;
+    
+}
+.trainer-name{
+    position: absolute;
+    color:rgb(255,255,255);
+    top:16rem;
+    left:1rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+
+}
+.trainer-desc{
+    position: absolute;
+    color:rgb(255,255,255);
+    top:17.5rem;
+    left:1rem;
+    font-size: 0.75rem;
+    color:rgba(255, 255, 255, 0.5);
+
+}
+.gallery img{
+    width: 100%;
+    border-radius: 1.125rem;
+    height: 100%;
+}
 
 /* responsive layout first page */
 
@@ -478,7 +540,7 @@ letter-spacing: 1px;
         
     }
     .card-container{
-        /* margin-left: 10.625rem; */
+        margin-left: 10.625rem;
         flex-direction: column;
     }
     
@@ -492,8 +554,10 @@ letter-spacing: 1px;
     .run{
         flex-direction: column;
         gap:0px;
-        margin-left: 70px;
-        width: 100%;
+        /* margin-left: 70px;
+        width: 100%; */
+        /* margin-left: 0px;
+        width: 90%; */
     }
     .run-content{
         margin-right: 2.5rem;
@@ -505,6 +569,24 @@ letter-spacing: 1px;
     .run-image img{
         width: 90%;
         margin-left: 1.3rem;
+    }
+
+
+
+    /* responsive-layout-team-section-mobile*/
+
+    @media screen and (max-width:640px){
+
+        .gallery{
+            grid-template-columns: repeat(1,1fr);
+        }
+        .team-card{
+            margin-left: 5.5rem;
+        }
+
+
+
+
     }
 
 
