--- a/styles/health.css
+++ b/styles/health.css
@@ -471,6 +471,68 @@ letter-spacing: 1px;
     height: 100%;
 }
 
+
+/* footer section */
+
+.footer{
+    background:rgba(255,255,255,0.1);
+    margin-top: 5rem;
+}
+
+.footer-content{
+    margin: 60px 0;
+    display: grid;
+    grid-template-columns:1.5fr  repeat(2,1fr);
+    width: 90%;
+    margin-left: 50px;
+    padding-top: 50px;
+    
+}
+
+
+.c1-title{
+    color: rgb(230, 83, 60);
+    font-size: 3.5rem;
+    font-weight: 800;
+    line-height: 120%;
+}
+.c1-desc{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+}
+.c2-title{
+    color: rgb(255, 255, 255);
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 120%;
+}
+.c-info{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 0.9rem;
+    font-weight: 400;
+    line-height: 120%;
+    margin-top: 0.5rem;
+}
+.line{
+    width:90%;
+    margin-left: 3.125rem;
+    border: 2px solid rgba(255, 255, 255, 0.1);
+}
+
+.footer-desc{
+    text-align: center;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 0.9rem;
+    font-weight: 400;
+    line-height: 1.5rem;
+    letter-spacing: 0.3px;
+    margin-top: 30px;
+    
+}
+
 /* responsive layout first page */
 
 
@@ -588,6 +650,28 @@ letter-spacing: 1px;
 
 
     }
+
+
+     /* responsive-layout-footer-section-mobile*/
+
+     .footer-content{
+        grid-template-columns: repeat(1,1fr);
+        
+     }
+
+     .footer-content1,.footer-content2,.footer-content3{
+        margin-right: 30px;
+     }
+     .footer-content2,.footer-content3{
+        margin-top: 0.75rem;
+     }
+
+     .line{
+        margin-left: 2.3rem;
+     }
+
+
+
 
 
 }
