--- a/styles/health.css
+++ b/styles/health.css
@@ -446,11 +446,15 @@ letter-spacing: 1px;
     font-weight: 900;
     line-height: 120%;
     letter-spacing: 0%;
-    /* margin-top: 40px; */
+    text-align: center;
+    margin-top: 40px;
 
 }
 .table{
     margin-top: 35px;
+    margin-left: 230px;
+    width: 300px;
+    height: 220px;
     
 }
 table,th,td{
@@ -463,6 +467,7 @@ thead th{
     font-weight: 500;
     line-height: 120%;
     letter-spacing: 0%;
+    height: 2.3rem;
 }
 tbody td{
     color: rgba(255, 255, 255, 0.5);
@@ -470,6 +475,7 @@ tbody td{
     font-weight: 400;
     line-height: 120%;
     letter-spacing: 0%;
+    padding: 1.5rem;
 }
 
 .bmi-cal-title{
@@ -478,6 +484,8 @@ tbody td{
     font-weight: 900;
     line-height: 120%;
     letter-spacing: 0%;
+    margin-top: 40px;
+    
 
 }
 .bmi-cal-desc{
@@ -487,17 +495,113 @@ tbody td{
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0.3px;
+    margin-top: 1rem;
 
+}
+form{
+    margin-top: 2rem;
 }
 
 form input,form select{
     border-radius: 8px;
     background: rgba(255, 255, 255, 0.1);
     padding:12px 20px;
+    border:none;
 }
-form select{
+form select,form ::placeholder{
     color: rgba(255, 255, 255, 0.5);
 }
+form input[type="text"]{
+    margin-bottom: 12px;
+    margin-right: 12px;
+}
+.cal-btn{
+    margin-top: 30px;
+}
+
+.bmi-banner{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+}
+
+
+/* explore-section */
+
+.explore{
+    margin-top:80px;
+}
+.explore-title{
+    color: rgb(255, 255, 255);
+    font-size: 2rem;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+}
+.explore-content{
+    justify-content: space-between;
+    align-items: center;
+}
+.arrow i{
+    color: rgb(255, 255, 255);
+    width: 2.5rem;
+    height: 2.5rem;
+    cursor: pointer;
+}
+.arrow i:hover{
+    font-size: 1.5rem;
+}
+.explore-card-container{
+    margin-top: 4rem;
+}
+
+.explore-card i{
+    color: rgb(255, 255, 255);
+    width: 2.5rem;
+    height: 1.5rem;
+    cursor: pointer;
+
+
+}
+.explore-card h4{
+    color: rgb(255, 255, 255);
+    font-weight: 500;
+    line-height: 120%;
+    letter-spacing: 0%;
+    margin-top: 0.7rem;
+
+}
+.explore-card p{
+    color:rgba(255, 255, 255, 0.5);
+    margin-top: 0.7rem;
+}
+.explore-card a{
+    text-decoration: none;
+    color:rgba(244, 244, 104, 0.823);
+    
+}
+.explore-card a i{
+    margin-left: 0.3rem;
+}
+.explore-card .join-btn{
+    margin-top: 1rem;
+}
+.explore-card-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap:1.5rem;
+}
+.explore-card{
+    border: 1px solid rgba(244, 244, 104, 0.823);
+    border-radius: 8px;
+    padding: 1rem 1rem;
+    box-shadow: 0px 0px 10px rgba(244, 244, 104, 0.823);
+    
+}
+.explore-card:hover{
+    border:4px solid rgba(244, 244, 104, 0.823);
+    box-shadow: 0px 0px 10px rgba(244, 244, 104, 0.823);
+}
+
 
 
 
